[project]
name = "riffmates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.5",
    "django-awl>=1.8.2",
    "django-debug-toolbar>=5.0.1",
    "django-extensions>=3.2.3",
    "django-grappelli>=4.0.1",
    "django-htmx>=1.21.0",
    "django-ninja>=1.3.0",
    "gunicorn>=23.0.0",
    "pillow>=11.1.0",
]
